--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,9 @@
     <title>Landmarker.io</title>
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, minimal-ui">
     <meta name="apple-mobile-web-app-title" content="Landmarker.io">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1">
+    <meta name="format-detection" content="telephone=no">
     <meta http-equiv="expires" content="0" />
     <!-- inject:css -->
     <!-- endinject -->
